tests/snapshots/raw__examples_in_informal_reference-95.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"123\")"
---
Ok(
    [
        Token {
            class: decimal_integer,
            length: 3,
        },
    ],
)
