tests/snapshots/raw__examples_in_informal_reference-96.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"123i32\")"
---
Ok(
    [
        Token {
            class: decimal_integer,
            length: 3,
        },
        Token {
            class: identifier,
            length: 3,
        },
    ],
)
