tests/snapshots/raw__examples_in_informal_reference-98.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"123_u32\")"
---
Ok(
    [
        Token {
            class: decimal_integer,
            length: 4,
        },
        Token {
            class: identifier,
            length: 3,
        },
    ],
)
