tests/snapshots/raw__examples_in_informal_reference.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"as\")"
---
Ok(
    [
        Token {
            class: identifier,
            length: 2,
        },
    ],
)
